# modulo_api

./: .gitignore  DEPLOYMENT_CHECKLIST.md  main.py  pyproject.toml
.env/: django.env.example  oerp.env.example
api/: admin.py  apps.py  authentication.py  models.py  schema.py  serializers.py  utils.py  views.py
api/migrations/: 0001_initial.py
config/: django_settings.py  settings.py  urls.py
helpers/: modulo_api.service  nginx.conf.example
